# alpha-base

./: .gitignore  CLAUDE.md  README.md
backend/: .dockerignore  Dockerfile  nixpacks.toml  pyproject.toml  run.sh
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: api_keys.py  articles.py  chat.py  deep_memory.py  documentation.py  errors.py  knowledge.py  youtube.py
backend/app/routers/: api_keys.py  articles.py  chat.py  deep_memory.py  documentation.py  events.py  knowledge.py  public_query.py  user_cleanup.py  youtube.py
backend/app/services/: agent_tools.py  api_key_service.py  article_scraper.py  auth_detection.py  categorizer.py  chat.py  chunk_count.py  cookie_service.py  deep_memory_service.py  doc_crawler.py  doc_scraper.py  job_manager.py  public_chat.py  query_reformulation.py  rate_limiter.py  training_generator.py  transcriber.py  url_validator.py  vectorstore.py  web_search_limiter.py  youtube_scraper.py
backend/app/utils/: text.py
backend/tests/: conftest.py  test_auth.py  test_auth_integration.py
frontend_legacy/: package-lock.json  package.json
next-frontend/: README.md  package-lock.json  package.json  script.sql  tailwind.config.ts
plans/: Devops.md  future features.md  implemented-features.md  plan-stage2-nextfrontend.md  plan-stage3-save-videos-to-db.md  plan-stage4-chat-with-knowledge.md  plan-stage5-split-backend.md  plan-stage6-channel-list.md  plan_stage1-initial.md  sales-brief.md
poc/: categorize_videos.py  main.py  transcribe_educational.py  videos.py
specs/: backlog.md  cookie for yt-dlp.md  (+1 more)
(+296 files in other folders)
