[project]
name = "alphabase-backend"
version = "0.1.0"
description = "AlphaBase Knowledge Base API"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langchain>=0.3.27",
    "openai>=1.0",
    "sse-starlette>=2.0",
    "httpx>=0.27",
    "deeplake>=4.5.1",
    "fastapi>=0.128.5",
    "ipykernel>=7.1.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.83",
    "langchain-deeplake>=0.1.0",
    "langchain-experimental>=0.3.4",
    "langchain-google-community>=2.0.10",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3,<1.0",
    "langchain-text-splitters>=0.3,<1.0",
    "lxml>=6.0.2",
    "lxml-html-clean>=0.4.3",
    "newspaper3k>=0.2.8",
    "pypdf>=6.6.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scrapetube>=2.5.1",
    "uvicorn>=0.40.0",
    "youtube-transcript-api>=1.0.0",
    "yt-dlp>=2026.2.4",
    "supabase>=2.0",
    "playwright>=1.58.0",
    "markdownify>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
